# lc-pipeline-v1

./: .dockerignore  .env.example  .gitignore  DATABRICKS_SETUP_CHECKLIST.md  DOCKER_DAGSTER_UI_TESTING_GUIDE.md  DOCKER_DATABRICKS_TEST_INSTRUCTIONS.md  DOCKER_TESTING_SUMMARY.md  Dockerfile  FINAL_TESTING_SUMMARY.md  FINAL_TEST_REPORT.md  GITHUB_CHECKLIST.md  LENDING_CLUB_PROJECT_DESIGN.md  LICENSE  Makefile  PIPELINE_EXECUTION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SMOKE_TEST_RESULTS.md  SMOKE_TEST_RESULTS_DUCKDB.md  TEST_RESULTS_SUMMARY.md  dagster.yaml  docker-compose.yml  prepare_github.sh  pyproject.toml  requirements.txt  test_dagster_full.py  test_dagster_quick.sh  test_dbt_full.py  test_fixed_tests.py  workspace.yaml
data/inputs/: Customer.csv  accounts.csv
dbt_project/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: clean_string.sql  quarantine_failed_records.sql  standardize_boolean.sql  standardize_column_name.sql
dbt_project/snapshots/: _snapshots.yml  snap_account.sql  snap_customer.sql
dbt_project/tests/: test_account_summary_interest_calculation.sql  test_account_summary_new_balance_calculation.sql  test_customer_profile_aggregation.sql  test_int_account_with_customer_balance_positive.sql  test_int_savings_account_only_type.sql  test_interest_calculation.sql  test_interest_rate_range.sql  test_snap_account_current_records.sql  test_snap_account_historical_records.sql  test_snap_customer_current_records.sql  test_snap_customer_historical_records.sql
docs/: DATA_QUALITY_GUIDE.md  LOCAL_SETUP.md  MIGRATION_GUIDE.md
docs/architecture/: asset_lineage_and_metadata.md  data_flow.md  system_design.md
docs/decisions/: 001-dagster-orchestration.md  002-dbt-transformations.md  003-environment-config.md
docs/guides/: development.md  (+4 more)
scripts/: README.md  create_enhanced_sample_data.py  create_sample_data.py  run_pipeline_locally.py  setup_local_env.sh  test_databricks_connection.py  test_pipeline_docker.sh  validate-setup.sh  validate_asset_metadata.py  validate_environment.py  validate_pipeline.py
tests/: smoke_test.py
(+49 files in other folders)
